# pista

./: .gitignore  .gitmodules  Cargo.toml  LICENCE  readme.md  shell.nix
src/: cwd.rs  kubernetes.rs  main.rs  prompt_char.rs  vcs.rs  venv.rs
