[package]
name = "pista"
version = "0.1.0"
authors = ["NerdyPepper <akshayoppiliappan@gmail.com>"]
edition = "2018"
description = "A simple bash prompt for programmers"
homepage = "https://github.com/nerdypepper/pista"
repository = "https://github.com/nerdypepper/pista"
readme = "./readme.md"
keywords = ["shell", "prompt", "theme", "cli"]
categories = ["command-line-interface", "command-line-utilities", "config"]
license = "MIT"


[dependencies]
tico = "1.0.0"
libc = "0.2.55"
colored = { git = "https://github.com/JoshMcguigan/colored", branch = "char-count" }
git2 = "0.8.0"
clap = "2.33.0"
